feat: Add dynamic app branding and favicon
Introduces the ability to dynamically set the application's logo, favicon, and name based on system settings. This enhances branding customization by allowing these assets to be configured via the backend.

The following changes were made:
- Added `appLogoDataUrl` and `appFaviconDataUrl` to `SystemAppSettings` type.
- Modified `index.html` to use an `id` for the favicon link.
- Updated `App.tsx` to fetch and apply the favicon dynamically.
- Modified `Sidebar.tsx` and `LoginScreen.tsx` to use `appLogoDataUrl` instead of `appLogoUrl`.
- Added configuration options for these settings in `backend/.env.example.txt`.
- Implemented logic in `backend/routes/users.js` to validate image size for profile pictures.
- Updated `backend/routes/system.js` to include `appLogoDataUrl` and `appFaviconDataUrl` in public config.

--- a/backend/.env.example.txt
+++ b/backend/.env.example.txt
@@ -25,3 +25,20 @@ AMI_SECRET=ami_password
 JWT_SECRET=votre_cle_secrete_pour_access_tokens_jwt
 JWT_REFRESH_SECRET=une_autre_cle_secrete_tres_longue_pour_refresh_tokens
 COOKIE_SECRET=un_secret_pour_signer_les_cookies
+
+# --- Paramètres de l'application ---
+COMPANY_ADDRESS="Votre Entreprise\n123 Rue Principale\n75001 Paris, France"
+APP_LOGO_DATA_URL=""
+APP_FAVICON_DATA_URL=""
+COLOR_PALETTE=default
+APP_NAME="EVSCallPro"
+DEFAULT_LANGUAGE=fr
+
+# --- Paramètres SMTP ---
+SMTP_SERVER=
+SMTP_PORT=587
+SMTP_AUTH=true
+SMTP_SECURE=false
+SMTP_USER=
+SMTP_PASSWORD=
+SMTP_FROM=noreply@example.com
