--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "i18next": "^23.11.5",
+    "i18next-browser-languagedetector": "^8.0.0",
     "react": "^19.0.0-rc-f994737d14-20240522",
     "react-dom": "^19.0.0-rc-f994737d14-20240522",
+    "react-i18next": "^14.1.2",
     "react-intersection-observer": "^9.10.3"
   },
   "devDependencies": {
